adding CRUD to all of the tables exept report and transaction
