# cmd/api/main.go
@@ -11,6 +11,28 @@ import (
 // @description     REST API for AdAli.
 // @host            localhost:8000
 // @BasePath        /
+//
+// @tag.name        Home
+//
+// @tag.name        Admin
+//
+// @tag.name        Publisher
+//
+// @tag.name        Advertiser
+//
+// @tag.name        Users
+//
+// @tag.name        Programs
+//
+// @tag.name        Ads
+//
+// @tag.name        Sites
+//
+// @tag.name        Zones
+//
+// @tag.name        Report
+//
+// @tag.name        Transaction
 func main() {
 	database.Connect()
 
@@ -19,5 +41,4 @@ func main() {
 	Routes(router)
 
 	router.Run("localhost:8000")
-
 }
